--- a/Quiz.html
+++ b/Quiz.html
@@ -10,7 +10,11 @@
   <div class="quiz-container">
     <h2>Simple Quiz Game</h2>
     <div id="quiz"></div>
-    <button id="submit">Submit Quiz</button>
+    <div class="navigation-buttons">
+      <button id="previous" class="nav-button">Previous</button>
+      <button id="next" class="nav-button">Next</button>
+    </div>
+    <button id="submit" class="hidden">Submit Quiz</button>
     <div id="results"></div>
   </div>
 
