--- a/Quiz.html
+++ b/Quiz.html
@@ -14,8 +14,9 @@
       <button id="previous" class="nav-button">Previous</button>
       <button id="next" class="nav-button">Next</button>
     </div>
-    <button id="submit" class="hidden">Submit Quiz</button>
+    <button id="submit" class="nav-button hidden">Submit Quiz</button>
     <div id="results"></div>
+    <div id="congrats-message" class="hidden"></div>
   </div>
 
   <script src="script.js"></script>
